Fix overflow and include other properties for improving behavior on mobile

--- a/resources/sass/imported/filter-category.scss
+++ b/resources/sass/imported/filter-category.scss
@@ -20,12 +20,21 @@
 
 .filter-list {
   display: flex;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding: 0;
+  padding-right: 5px;
+  padding-left: 5px;
+  scrollbar-width: none;
+  overflow-x: auto;
+  overflow-y: hidden;
   scroll-behavior: smooth;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  -webkit-overflow-scrolling: touch;
   white-space: nowrap;
   width: 100%;
+
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
+  }
 }
 
 .category a {
